--- a/css/s.css
+++ b/css/s.css
@@ -3,10 +3,10 @@
     width: 100vw;
 }
 
-.s1{
+.sc{
     position: relative;
     height: 100vh;
-    background: linear-gradient(to right,#8c8c8c, #acacac, #e3e3e3, #acacac, #8c8c8c);
+    background: linear-gradient(to right,#8c8c8c, #acacac, #e3e3e3, #acacac, #747474, #000000);
 }
 
 .toprail{
@@ -52,7 +52,7 @@
     top: 0;
     right: 0;
     height: 100vh;
-    width: 35vh;
+    width: 45vh;
     z-index: 100;
 }
 
@@ -61,6 +61,33 @@
     right: 1.7vw;
     width: 70%;
     height: auto;
+}
+
+.sector-header {
+  display: flex;
+  position: absolute;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 35px;
+  margin-top: 35px;
+  margin-left: 35px;
+  line-height: 0.8;
+  width: 60vw;
+}
+
+.sector-label {
+  font-size: 5rem;
+  font-weight: 900;
+  color: #000;
+}
+
+.about-label {
+  font-size: 2rem;
+  font-weight: 900;
+  padding: 2vh;
+  background-color: #000;
+  border-radius: 10px;
+  color: #cbcbcb;
 }
 
 @media (max-width: 1000px){
@@ -78,5 +105,22 @@
     .liftcontent{
         width: 30vw;
         right: 3vw;
+    }
+    .sector-header {
+      flex-direction: column;
+      align-items: baseline;
+      gap: 15px;
+      margin-top: 15px;
+      margin-left: 20px;
+      width: auto;
+    } 
+    .sector-label {
+      font-size: 2rem;
+    }
+    .about-label {
+      font-size: 0.8rem;
+      padding: 2vh;
+      width: 100%;
+      text-align: center;
     }
 }
