--- a/css/s.css
+++ b/css/s.css
@@ -63,6 +63,14 @@
     height: auto;
 }
 
+.man{
+    position: relative;
+    width: 55%;
+    height: auto;
+    z-index: -100;
+    transition: transform 1.5s ease;
+}
+
 .sector-header {
   display: flex;
   position: absolute;
