--- a/css/s.css
+++ b/css/s.css
@@ -98,6 +98,15 @@
   color: #cbcbcb;
 }
 
+.footer{
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    background: url(../images/back.gif) center / cover no-repeat;
+    overflow: hidden;
+    z-index: 1000;
+}
+
 @media (max-width: 1000px){
     .toprail, .bottomrail{
         width: 40vw;
