--- a/css/s.css
+++ b/css/s.css
@@ -102,8 +102,7 @@
     position: absolute;
     height: 100vh;
     width: 100%;
-    background: url(../images/back.gif) center / cover no-repeat;
-    overflow: hidden;
+    background-color: #000;
     z-index: 1000;
 }
 
@@ -122,6 +121,13 @@
     .liftcontent{
         width: 30vw;
         right: 3vw;
+    }
+    .man{
+        left: 2vw;
+        width: 45%;
+    }
+    .lift{
+        width: 60%;
     }
     .sector-header {
       flex-direction: column;
