--- a/css/skills.css
+++ b/css/skills.css
@@ -74,7 +74,7 @@
 }
 
 .skscl{
-    display: none;
+  display: none;
 }
 
 .skillim{
@@ -110,6 +110,7 @@
 .cert:hover{
     background-color: rgb(197, 197, 197);
     color: black;
+    border: black 3px solid;
 }
 
 @media (max-width: 1000px) {
@@ -139,6 +140,7 @@
     width: 100%;
     flex-shrink: 0;
     padding: 10px;
+    border-radius: 10px;
   }
   .skscl{
     display: block;
@@ -158,6 +160,7 @@
   .skill-list div{
     font-size: 10px;
     padding: 7px;
+    border-radius: 5px;
   }
   .skillim{
     height: 0.9rem;
