--- a/css/projects.css
+++ b/css/projects.css
@@ -1,10 +1,10 @@
 .projectcontain{
-    position: absolute;
-    top: 20vh;
-    width: 64vw;
-    height: 80vh;
-    padding-left: 35px;
-    padding-bottom: 35px;
+  position: absolute;
+  top: 20vh;
+  width: 64vw;
+  height: 80vh;
+  padding-left: 35px;
+  padding-bottom: 35px;
 }
 
 .projectcards {
@@ -183,5 +183,5 @@
 }
 
 .box2{
-  background-image: url('../images/game.jpg');
+  background-image: url('../images/elyra.png');
 }
