--- a/css/exp.css
+++ b/css/exp.css
@@ -8,14 +8,129 @@
 }
 
 .expcontent {
-    display: flex;
-    height: 75%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.303);
-    border-radius: 20px;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  position: relative;
+  height: 75%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.303);
+  border-radius: 20px;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.expcont{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  margin: 0 35px;
+  padding: 20px 0;
+  border-radius: 10px;
+  gap: 20px;
+  overflow-x: scroll;
+  scrollbar-width: none;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+}
+
+.expcont::-webkit-scrollbar {
+  display: none; 
+}
+
+.expcard{
+  color: rgb(197, 197, 197);
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  background: url('../images/back.gif') center / cover no-repeat;
+  height: 100%;
+  border-radius: 15px;
+  min-width: calc((100% - 40px)/3);
+  scroll-snap-align: start;
+  padding: 20px;
+  gap: 10px;
+  font-weight: 500;
+}
+
+.e1, .e2, .e3{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.e1{
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  font-size: 1.5rem;
+}
+.e2{
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 10px;
+  background-color: rgba(105, 105, 105, 0.2);
+  flex: 3;
+}
+.e3{
+  flex: 4;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgba(105, 105, 105, 0.2);
+  text-align: center;
+  overflow-y: scroll;
+  overflow-x: scroll;
+  scrollbar-width: none; 
+}
+
+.e3::-webkit-scrollbar {
+  display: none; 
+}
+
+.rcont{
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  height: 75%;
+  max-height: 75%;
+  width: 100%;
+  background: url('../images/back.gif') center / cover no-repeat;
+  border-radius: 20px;
+  padding: 20px;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.resume{
+  flex: 9;
+  border-radius: 10px;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: scroll;
+  scrollbar-width: none; 
+}
+
+.resume::-webkit-scrollbar {
+  display: none; 
+}
+
+.download{
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Orbitron", Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
+  text-decoration: none;
+  font-weight: 700;
+  border-radius: 10px;
+  height: 100%; 
+  /* background: linear-gradient(to right, #acacac, #e3e3e3, #ACACAC); */
+  background-color: rgba(105, 105, 105, 0.2);
+  color: rgb(197, 197, 197);
+  writing-mode: vertical-lr;
 }
 
 @media (max-width: 1000px) {
@@ -25,8 +140,43 @@
     padding-left: 20px;
   }
   .expcontent {
-    flex-direction: column;
     height: 70%;
     border-radius: 10px;
+  }
+  .expcont{
+    width: 100%;
+    margin: 0 20px;
+  }
+  .expcard{
+    justify-content: center;
+    min-width: 100%;
+    border-radius: 8px;
+    padding: 10px;
+  }
+  .e1{
+    font-size: 16px;
+  }
+  .e3{
+    font-size: 10px;
+  }
+  .rcont{
+    height: 70%;
+    max-height: 70%;
+    border-radius: 10px;
+    flex-direction: column;
+  }
+  .resume{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    background-color: black;
+  }
+
+  .download{
+    width: 100%;
+    writing-mode: horizontal-tb;
+    border-radius: 5px;
+    font-size: 10px;
   }
 }
