--- a/css/exp.css
+++ b/css/exp.css
@@ -127,10 +127,86 @@
   font-weight: 700;
   border-radius: 10px;
   height: 100%; 
-  /* background: linear-gradient(to right, #acacac, #e3e3e3, #ACACAC); */
   background-color: rgba(105, 105, 105, 0.2);
   color: rgb(197, 197, 197);
   writing-mode: vertical-lr;
+}
+
+.csector{
+  color: rgb(197, 197, 197);
+}
+
+.cabout{
+  color: black;
+  background: linear-gradient(to right, #acacac, #e3e3e3, #ACACAC);
+}
+
+.footer{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  background-color: #000;
+  z-index: 1000;
+}
+
+.endtext{
+  background-color: rgba(105, 105, 105, 0.2);
+  margin: 0 10vw;
+  text-align: center;
+  color: rgb(197, 197, 197);
+  margin-bottom: 5vh;
+  padding: 15px;
+  border-radius: 15px;
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+.ccontent{
+  display: flex;
+  height: 10vh;
+  width: 40vw;
+  gap: 20px;
+  margin-bottom: 5vh;
+}
+
+.c{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  height: 100%;
+  border-radius: 10px;
+  background: linear-gradient(to right, #acacac, #e3e3e3, #ACACAC);
+  transition: all 0.3s ease;
+}
+
+.c:hover {
+  transform: scale(1.1);
+}
+
+.i{
+  height: 80%;
+  width: calc(height);
+}
+
+.go{
+  border: 0;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: rgba(105, 105, 105, 0.2);
+  color: rgb(197, 197, 197);
+  font-family: "Orbitron", Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.go:hover{
+  background: linear-gradient(to right, #acacac, #e3e3e3, #ACACAC);
+  color: #000;
 }
 
 @media (max-width: 1000px) {
@@ -178,5 +254,16 @@
     writing-mode: horizontal-tb;
     border-radius: 5px;
     font-size: 10px;
+  }
+  .endtext{
+    font-size: 14px;
+  }
+  .ccontent{
+    width: 70vw;
+    height: 5vh;
+    gap: 10px;
+  }
+  .c{
+    border-radius: 5px;
   }
 }
