--- a/css/exp.css
+++ b/css/exp.css
@@ -159,6 +159,7 @@
   text-align: center;
   color: rgb(197, 197, 197);
   margin-bottom: 5vh;
+  width: 40vw;
   padding: 15px;
   border-radius: 15px;
   font-size: 1.2rem;
@@ -197,6 +198,7 @@
   border: 0;
   padding: 10px;
   border-radius: 5px;
+  width: 40vw;
   background-color: rgba(105, 105, 105, 0.2);
   color: rgb(197, 197, 197);
   font-family: "Orbitron", Arial, Helvetica, sans-serif;
@@ -207,6 +209,79 @@
 .go:hover{
   background: linear-gradient(to right, #acacac, #e3e3e3, #ACACAC);
   color: #000;
+}
+
+.end{
+  background: linear-gradient(to right, #8c8c8c, #acacac, #e3e3e3, #acacac, #747474);
+  position: absolute; 
+  bottom: 0; 
+  padding: 25px; 
+  font-weight: 600;
+  text-align: center; width: 100%; 
+  color: black;
+}
+
+.select{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  margin-right: 8vw;
+  height: 13vh;
+  width: 100%;
+  background: url('../images/back.gif') center / cover no-repeat;
+  border-radius: 10px;
+  padding: 10px;
+  padding-top: 0;
+  font-weight: 500;
+  color: rgb(197, 197, 197);
+}
+
+.loc{
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+.choose{
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+.choose button{
+  font-family: "Orbitron", Arial, Helvetica, sans-serif;
+  flex: 1;
+  border: 0;
+  height: 100%;
+  background: linear-gradient(to right, #8c8c8c, #acacac, #e3e3e3, #acacac, #747474);
+  font-weight: 800;
+  border-radius: 5px;
+}
+.a::before{
+  content: 'Choose Sector';
+}
+
+#controls, #loc{
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+}
+
+#loc{
+  display: flex;
+  flex-direction: column;
+  background: none;
+  gap: 3px;
+}
+
+.line{
+  flex: 1;
+  width: 100%;
+  background-color: #000;
 }
 
 @media (max-width: 1000px) {
@@ -256,6 +331,7 @@
     font-size: 10px;
   }
   .endtext{
+    width: auto;
     font-size: 14px;
   }
   .ccontent{
@@ -265,5 +341,33 @@
   }
   .c{
     border-radius: 5px;
+  }
+  .end{
+    font-size: 14px;
+  }
+  .select{
+    margin-left: 2vw;
+    margin-right: 0vw;
+    height: 30vh;
+    width: 40%;
+    border-radius: 5px;
+  }
+  .choose{
+    padding-top: 10px;
+    flex-direction: column;
+  }
+  .liftb{
+    flex: 7;
+  }
+  .a::before{
+    flex: 1;
+    content: 'S';
+  }
+  .choose button{
+    border-radius: 2px;
+    width: 100%;
+  }
+  #loc{
+    gap: 5px;
   }
 }
