--- a/css/s.css
+++ b/css/s.css
@@ -49,6 +49,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 7vh;
     top: 0;
     right: 0;
     height: 100vh;
@@ -93,7 +95,7 @@
   font-size: 2rem;
   font-weight: 900;
   padding: 2vh;
-  background-color: #000;
+  background: url(../images/back.gif) center / cover no-repeat;
   border-radius: 10px;
   color: #cbcbcb;
 }
@@ -113,6 +115,7 @@
     .liftcontent{
         width: 30vw;
         right: 3vw;
+        gap: 6vh;
     }
     .man{
         left: 2vw;
