--- a/css/index.css
+++ b/css/index.css
@@ -398,7 +398,7 @@ body {
     .profile-image {
         position: absolute;
         width: 100vw;
-        height: fit-content;
+        height: auto;
         right: 0;
         bottom: 0;
         z-index: 2;
